<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name" translatable="false">SEACO MOCA</string>

    <string name="short_title" translatable="false">SEACO MOCA</string>
    <string name="full_title">Montreal Cognitive Assessment</string>
    <string name="assessment_version" translatable="false">0.7</string>
    <string-array name="language_choices">
        <item>@string/lang_en</item>
        <item>@string/lang_ms</item>
        <item>@string/lang_zh</item>
    </string-array>
    <string-array name="gender_choices">
        <item>@string/gender_male</item>
        <item>@string/gender_female</item>
    </string-array>

    <string-array name="education_choices">
        <item>@string/edu_none</item>
        <item>@string/edu_primary</item>
        <item>@string/edu_secondary</item>
        <item>@string/edu_tertiary</item>
        <item>@string/edu_others</item>
    </string-array>

    <string-array name="pageNameArray">
        <item>@string/strname_overview</item>
        <item>@string/strname_ve_node</item>
        <item>@string/strname_ve_cube</item>
        <item>@string/strname_ve_clock</item>
        <item>@string/strname_naming</item>
        <item>@string/strname_memory</item>
        <item>@string/strname_att_digits</item>
        <item>@string/strname_att_letters</item>
        <item>@string/strname_att_sub</item>
        <item>@string/strname_lang_repeat</item>
        <item>@string/strname_lang_fluency</item>
        <item>@string/strname_abstraction</item>
        <item>@string/strname_delayed_recall</item>
        <item>@string/strname_orientation</item>
        <item>@string/summary_message</item>
    </string-array>
    <string name="moca_fluency_helptext">Name maximum number of words in one minute
        \nthat begins with letter F. \n \n
    Separate each word with a comma.</string>
    <string name="screen_menu_credits">About</string>
    <string name="credit_text" translatable="false">
        SEACO MOCA Test App v1.1.1 \n
        Developed by Monash SSPIT 15/16 \n
        Developers: Hao Bin, Nigel, Woei Jer \n
        \n
        Adapted from: \n
        www.mocatest.org \n
        Copyright: Z. Nasreddine MD \n
        \n
        Singapore Version (Chinese) 30 September 2010 \n
        Translated by Dong Yanhong and Quah Soo Li
    </string>
    <string name="moca_overview_summary_text">This test consists of 13 sections. \nPress the Next button on the right to begin.</string>
    <string name="moca_summary_text">You have successfully completed all the tests. \nClick the Finish button on top to exit.</string>
    <string name="moca_abstraction_helptext">Similarity between e.g Banana-Orange = Fruit</string>
    <string name="moca_orientation_helptext">Please answer the following questions.</string>
    <string name="strname_overview"> </string>
    <string name="moca_abstraction_q1_labeltext">Train-Bicycle</string>
    <string name="moca_abstraction_q2_labeltext">Watch-Ruler</string>
    <string name="strname_ve_node">Visuospatial/Executive: Node</string>
    <string name="strname_ve_cube">Visuospatial/Executive: Cube</string>
    <string name="strname_ve_clock">Visuospatial/Executive: Clock</string>
    <string name="strname_naming">Naming</string>
    <string name="strname_memory">Memory</string>
    <string name="strname_att_digits">Attention: Digits</string>
    <string name="strname_att_letters">Attention: Letters</string>
    <string name="strname_att_sub">Attention: Subtraction</string>
    <string name="strname_lang_repeat">Language: Repeat</string>
    <string name="strname_lang_fluency">Language: Fluency </string>
    <string name="strname_abstraction">Abstraction</string>
    <string name="strname_delayed_recall">Delayed Recall</string>
    <string name="strname_orientation">Orientation</string>
    <string name="summary_message">All data saved. </string>
    <string name="saved_message">Data saved. Proceeding to Next Test...</string>
    <string name="summary_screen_message">The test has been completed. All data saved successfully.</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_en_code" translatable="false">en</string>
    <string name="lang_ms" translatable="false">Bahasa Melayu</string>
    <string name="lang_ms_code" translatable="false">ms</string>
    <string name="lang_zh" translatable="false">中文</string>
    <string name="lang_zh_code" translatable="false">zh</string>
    <string name="main_start">Start</string>
    <string name="screen_menu_quit">Quit</string>
    <string name="screen_menu_finish">Finish</string>
    <string name="screen_menu_view_files">View Past Data</string>
    <string name="screen_menu_about">About...</string>
    <string name="title_activity_info_screen" translatable="false">MOCA</string>
    <string name="confirm_exit_title">Confirm Exit</string>
    <string name="confirm_exit_message">"Are you sure you want to quit? All progress will be lost."</string>
    <string name="confirm_ok">Yes</string>
    <string name="confirm_cancel">No</string>
    <string name="moca_version">"Version 7.1 ORIGINAL"</string>
    <string name="info_table_label_name">Name: </string>
    <string name="info_table_label_sex">Gender: </string>
    <string name="info_table_label_dob">Date of Birth: </string>
    <string name="info_table_label_education">Education: </string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="edu_none">None</string>
    <string name="edu_primary">Primary level</string>
    <string name="edu_secondary">Secondary level</string>
    <string name="edu_tertiary">Tertiary level</string>
    <string name="edu_others">Others</string>
    <string name="about_app" translatable="false">Developed by SEACO-Monash SSPIT 15/16 -  Hao Bin, Nigel, Woei Jer</string>
    <string name="main_name_error_msg">Assessing as anonymous participant.</string>

    <string name="moca_orientation_day">Day</string>
    <string name="moca_orientation_month">Month</string>
    <string name="moca_orientation_year">Year</string>
    <string name="moca_orientation_weekday">Weekday</string>
    <string name="moca_orientation_place">Place</string>
    <string name="moca_orientation_city">City</string>
<string name="ok">OK</string>

    <string name="moca_language_repeat_helptext">Repeat: </string>
    <string name="moca_language_repeat_q1_labeltext">I only know that John is the one to help today.</string>
    <string name="moca_language_repeat_q2_labeltext">The cat always hid under the couch when dogs were in the room.</string>

    <string name="moca_attention_digits_helptext">Read list of digits (1 digit/sec) </string>
    <string name="moca_attention_digits_q1_labeltext">Subject repeat in forward order: 2 1 8 5 4</string>
    <string name="moca_attention_digits_q2_labeltext">Subject repeat in backward order: 7 4 2</string>

    <string name="moca_attention_letters_helptext">Read list of letters. \n The subject must tap with each hand at each letter A. \n No points if more than 2 errors.  </string>
    <string name="moca_attention_letters_q1_labeltext">F B A C M N A A J K L B A F A K D E A A A J A M O F A A B</string>
    <string name="moca_attention_letters_cb">1 Mark for Error &#8804;2</string>
    <string name="moca_attention_letters_correct_label">Number of correct responses: </string>

    <string name="moca_attention_subtraction_helptext">Serial 7 subtraction starting at 100 \n
    \n \n
    4 or 5 correct subtractions: 3 pts \n
    2 or 3 correct: 2 pts \n
    1 correct: 1 pt \n
    0 correct: 0 pt</string>
    <string name="moca_attention_subtraction_q1_labeltext" translatable="false">93</string>
    <string name="moca_attention_subtraction_q2_labeltext" translatable="false">86</string>
    <string name="moca_attention_subtraction_q3_labeltext" translatable="false">79</string>
    <string name="moca_attention_subtraction_q4_labeltext" translatable="false">72</string>
    <string name="moca_attention_subtraction_q5_labeltext" translatable="false">65</string>

    <string name="moca_memory_helptext">Repeat list of words, subject must repeat them. \n
    Do 2 trials, even if 1st trial is successful.\n
    Do a recall after 5 minutes.</string>
    <string name="moca_memory_q1">FACE</string>
    <string name="moca_memory_q2">VELVET</string>
    <string name="moca_memory_q3">CHURCH</string>
    <string name="moca_memory_q4">DAISY</string>
    <string name="moca_memory_q5">RED</string>
    <string name="moca_memory_label1">1st Trial</string>
    <string name="moca_memory_label2">2nd Trial</string>

    <string name="moca_memory_delayed_helptext">Delayed Recall
    \n Points for uncued recall only.
    \n \n
    Timer below shows the time elapsed since the first recall test.</string>
    <string name="moca_memory_delayed_label1">No Cue</string>
    <string name="moca_memory_delayed_label2">Category</string>
    <string name="moca_memory_delayed_label3">Multiple Choice</string>
    <string name="optional">OPTIONAL CUE</string>

    <string name="moca_visuo_node_helptext"> Please draw a line, going from a number to a letter in ascending order.</string>
    <string name="moca_visuo_clock_helptext">Draw a clock. Put in all the numbers and set the time to 10 past 11.</string>
    <string name="moca_visuo_cube_helptext">Copy this drawing as accurately as you can, in the space below</string>

    <string name="contour">Contour</string>
    <string name="number">Number</string>
    <string name="hands">Hands</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="mark">1 Mark</string>
    <string name="pen">Pen</string>
    <string name="eraser">Eraser</string>
    <string name="clear">Clear</string>

    <string name="completed">Completed</string>

    <string name="optional_type_here">Optionally type here..</string>
    <string name="start_record">Start Recording</string>
    <string name="stop_record">Stop</string>
    <string name="confirm_replace_record">Confirm Replace Recording</string>
    <string name="confirm_replace_record_msg">Proceeding may replace your previous recording. Press Start Recording again to record a new instance.</string>
</resources>
