<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center"
    android:background="#ededed">
    <TextView
        android:id="@+id/moca_memory_delayed_helptextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moca_memory_delayed_helptext"
        android:gravity="center"
        android:textSize="20sp"

        />


    <RelativeLayout
        android:layout_below="@+id/moca_memory_helptextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="40dp"

        >
        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:padding="20dp"

            >
            <TableRow
                android:paddingBottom="20dp"

                >
                <TextView
                    android:text=" "
                    android:layout_width="60dp"
                    android:gravity="right"
                    android:paddingRight="20dp"/>
                <TextView
                    android:text="@string/moca_memory_q1"
                    android:layout_width="80dp"
                    android:gravity="center"
                    android:paddingRight="20dp"/>
                <TextView
                    android:text="@string/moca_memory_q2"
                    android:layout_width="80dp"
                    android:gravity="center"
                    android:paddingRight="20dp"/>
                <TextView
                    android:text="@string/moca_memory_q3"
                    android:layout_width="80dp"
                    android:gravity="center"
                    android:paddingRight="20dp"/>
                <TextView
                    android:text="@string/moca_memory_q4"
                    android:layout_width="80dp"
                    android:gravity="center"
                    android:paddingRight="20dp"/>
                <TextView
                    android:text="@string/moca_memory_q5"
                    android:layout_width="80dp"
                    android:gravity="center"
                    android:paddingRight="20dp"/>

            </TableRow>

            <TableRow android:paddingBottom="20dp">
                <TextView
                    android:text="@string/moca_memory_label1"
                    android:layout_width="60dp"
                    android:gravity="right"
                    android:paddingRight="20dp"/>
                <EditText
                    android:id="@+id/moca_memory_q1_field1"/>
                <EditText
                    android:id="@+id/moca_memory_q2_field1"/>
                <EditText
                    android:id="@+id/moca_memory_q3_field1"/>
                <EditText
                    android:id="@+id/moca_memory_q4_field1"/>
                <EditText
                    android:id="@+id/moca_memory_q5_field1"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/moca_memory_label2"
                    android:layout_width="80dp"
                    android:gravity="right"
                    android:paddingRight="20dp"/>
                <EditText
                    android:id="@+id/moca_memory_q1_field2"/>
                <EditText
                    android:id="@+id/moca_memory_q2_field2"/>
                <EditText
                    android:id="@+id/moca_memory_q3_field2"/>
                <EditText
                    android:id="@+id/moca_memory_q4_field2"/>
                <EditText
                    android:id="@+id/moca_memory_q5_field2"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</RelativeLayout>