<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center"
    android:background="#ededed">
    <TextView
        android:id="@+id/moca_visuo_clock_helptextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moca_visuo_clock_helptext"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingTop="10dp"

        />
    <RelativeLayout
        android:layout_below="@id/moca_visuo_clock_helptextview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cccccc"
        android:id="@+id/moca_visuo_clock_canvas"
        android:layout_margin="20dp"
        android:layout_above="@+id/moca_visuo_clock_cblayout">

    </RelativeLayout>
    <TableLayout
        android:id="@+id/moca_visuo_clock_cblayout"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <TableRow>
            <CheckBox android:id="@+id/moca_visuo_clock_cb1" android:text="@string/contour"/>
            <CheckBox android:id="@+id/moca_visuo_clock_cb2" android:text="@string/number"/>
            <CheckBox android:id="@+id/moca_visuo_clock_cb3" android:text="@string/hands"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>