<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center"
    android:background="#ededed">
    <TextView
        android:id="@+id/moca_attention_digits_helptextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moca_attention_digits_helptext"
        android:gravity="center"
        android:textSize="20sp"

        />

    <RelativeLayout
        android:layout_below="@+id/moca_attention_digits_helptextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0"
            android:padding="70dp"
            >
            <TableRow
                android:paddingBottom="20dp">
                <TextView
                    android:text="@string/moca_attention_digits_q1_labeltext"
                    android:layout_width="160dp"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:paddingRight="20dp"
                    />

                <CheckBox
                    android:id="@+id/moca_attention_digits_q1_mark"/>
            </TableRow>
            <TableRow>

                <TextView android:text="@string/moca_attention_digits_q2_labeltext"
                    android:layout_width="80dp"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:paddingRight="20dp"/>

                <CheckBox
                    android:id="@+id/moca_attention_digits_q2_mark"/>
            </TableRow>
            <TableRow>
                <CheckBox android:id="@+id/moca_attention_digits_completed" android:text="@string/completed" />
            </TableRow>

        </TableLayout>
    </RelativeLayout>
</RelativeLayout>