<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center"
    android:background="#ededed">
    <TextView
        android:id="@+id/moca_fluency_helptextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moca_fluency_helptext"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingBottom="30dp"
        />
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/moca_fluency_helptextview"
        >

        <Chronometer

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer_10"
            android:gravity="center"
            android:format="%s"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            />
        <Button
            android:layout_below="@+id/chronometer_10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/start_record"
            android:id="@+id/chronometer_10_startstop"
        />

        <EditText
            android:layout_below="@+id/chronometer_10_startstop"
            android:id="@+id/moca_fluency_field"
            android:background="#ffffff"

            android:inputType="textMultiLine"
            android:layout_margin="50dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="300dp"
            android:gravity="left"
            android:hint="@string/optional_type_here"

            />
        <TableRow
            android:layout_below="@id/moca_fluency_field"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center">
            <CheckBox
                android:layout_marginLeft="50dp"
                android:layout_gravity="center"
                android:id="@+id/moca_fluency_mark"
                android:text="N >= 11 words"/>
            <CheckBox android:id="@+id/moca_fluency_completed" android:text="@string/completed" />
        </TableRow>

    </RelativeLayout>

</RelativeLayout>